tests/baselines/reference/invalidUnicodeEscapeSequance3.errors.txt
tests/cases/compiler/invalidUnicodeEscapeSequance3.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/compiler/invalidUnicodeEscapeSequance3.ts(1,2): error TS1127: Invalid character.
tests/cases/compiler/invalidUnicodeEscapeSequance3.ts(1,3): error TS2304: Cannot find name 'u'.


==== tests/cases/compiler/invalidUnicodeEscapeSequance3.ts (3 errors) ====
    a\u
    ~
!!! error TS2304: Cannot find name 'a'.
     
!!! error TS1127: Invalid character.
      ~
!!! error TS2304: Cannot find name 'u'.